# eval_annotate_scale

./: .bazelrc  .flake8  .gitignore  BUILD.bazel  LICENSE.md  MODULE.bazel  README.md  TESTING_RESULTS.md  environment.yml  pyproject.toml  requirements.txt
configs/: BUILD.bazel  development.yml  preprocessing_config.yaml
data/: BUILD.bazel  README.md
data/examples/: clear_records_sample.json  marginal_pairs_sample.json  processed_passages_sample.json
data/outputs/: marginal_pairs_cache.json  marginal_pairs_progress.json  segmented_passages.json  segmented_passages_cache.json  segmented_passages_progress.json
data/schemas/: clear_record.json  marginal_pair.json  processed_passage.json
docs/: configuration_guide.md  generate_marginal_pairs_guide.md  segment_passages_guide.md
prompts/: README.md
scripts/: BUILD.bazel  README.md  bzlmod_migration_notes.md  demo_processing.py  generate_marginal_pairs.py  intelligent_passage_preprocessing.py  segment_passages.py  setup_bazel_env.py  setup_dev.sh  setup_preprocessing.py  test_scalability.py  test_statistical_filtering.py  validate_environment.py  verify_clear_count.py
src/: BUILD.bazel  __init__.py  bazel_utils.py  config_manager.py  main.py  statistical_pair_filter.py
tests/: __init__.py
tools/: BUILD.bazel  hello.py
