"""
Bazel module configuration for eval_annotate_scale project.
Using Bzlmod (Bazel 8.3+) for modern dependency management.
"""

module(
    name = "eval_annotate_scale",
    version = "0.1.0",
)

# Core Bazel dependencies
bazel_dep(name = "rules_python", version = "0.40.0")

# Python toolchain configuration
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
    is_default = True,
)

# Python dependencies via pip - using system conda environment
# Temporarily disabled to use system Python with conda packages
# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
# pip.parse(
#     hub_name = "eval_annotate_scale_deps",
#     python_version = "3.13",
#     requirements_lock = "//:requirements.txt",
# )
# use_repo(pip, "eval_annotate_scale_deps")

# Development and testing tools
bazel_dep(name = "bazel_skylib", version = "1.7.1")  # Required by rules_python