load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

# Configuration management library
py_library(
    name = "config_manager",
    srcs = ["config_manager.py"],
    visibility = ["//visibility:public"],
    # Uses system conda environment packages
    deps = [],
)

# Bazel path resolution utilities
py_library(
    name = "bazel_utils",
    srcs = ["bazel_utils.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

# Statistical pair filtering library
py_library(
    name = "statistical_pair_filter",
    srcs = ["statistical_pair_filter.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

# Bazel utils test binary
py_binary(
    name = "test_bazel_utils",
    srcs = ["bazel_utils.py"],
    main = "bazel_utils.py",
    visibility = ["//visibility:public"],
    deps = [],
)

# Main CLI application
py_binary(
    name = "main",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    # Uses system conda environment packages
    deps = [],
)